Again, tag the master branch as 'latest'

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,6 +53,12 @@ jobs:
         with:
           flavor: |
             latest=auto
+          tags: |
+            type=match,pattern=master,value=latest,priority=1000
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=tag
+            type=ref,event=pr
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
